fixed bug in strict sizing to stop object shift in (especially) statuses

--- a/src/components/SpApp/SpApp.css
+++ b/src/components/SpApp/SpApp.css
@@ -3,18 +3,15 @@ body {
 }
 
 :root {
-  font-family: Kreon, Georgia, sans-serif;
-  text-shadow: oklch(0 0 0 / 0.72) 2px 1px 0px;
-  font-size: 12px;
+
   --icon-size: 2rem;
   --image-size: var(--icon-size);
   --hover-scale: 1.2;
   --hover-transition: transform .1s;
   --item-padding: 0px;
   --icon-scale-margin: round(up, calc(var(--icon-size) * (var(--hover-scale) - 1) / 2), 1px);
-  line-height: normal;
-  cursor: url(https://cdn.spire-codex.com/ui/cursors/cursor_default.png), default;
-
+  --text-stroke-width: round(up, 0.2em, 1px);
+  --text-stroke-padding: calc(var(--stroke-width) / 2);
   --normal-text-color: #FFF6E2;
   --heading-text-color:#EFC851;
   --upgrade-text-color: #7EFD01;
@@ -27,8 +24,14 @@ body {
   --legend-heading-text-color: #15293E;
   --legend-text-color: #294667;
   --rarity-color-uncommon: #64ffff;
-  -webkit-text-stroke-color: var(--normal-stroke-color);
+
+  font-family: Kreon, Georgia, sans-serif;
+  text-shadow: oklch(0 0 0 / 0.72) 2px 1px 0px;
+  line-height: normal;
+  cursor: url(https://cdn.spire-codex.com/ui/cursors/cursor_default.png), default;
+  font-size: 12px;
   color: var(--normal-text-color);
+  -webkit-text-stroke-color: var(--normal-stroke-color);
 }
 
 html,
