--- a/src/components/SpOutlinedText/SpOutlinedText.css
+++ b/src/components/SpOutlinedText/SpOutlinedText.css
@@ -1,9 +1,7 @@
 .outlined-text {
   display: grid;
-  --stroke-width: round(up, 0.2em, 1px);
-  --stroke-padding: calc(var(--stroke-width) / 2);
-  -webkit-text-stroke-width: var(--stroke-width);
-  padding: var(--stroke-padding);
+  -webkit-text-stroke-width: var(--text-stroke-width);
+  padding: var(--text-stroke-padding);
   * {
       grid-column-start: 1;
       grid-row-start: 1;
